--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,9 @@ body {
 a {
     text-decoration: none;
 }
-img {
-    max-width: 100%;
-}
 
 /* HEADED
 ------------------------------------- */
-.logo {
-    width: 210px;
-    margin-top: 14px;
-}
 .main-nav {
     display: flex;
     font-size: 1.25rem;
@@ -41,7 +34,7 @@ img {
 }
 .page-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 .wrapper {
     max-width: 1100px;
@@ -66,6 +59,7 @@ img {
 }
 
 .home-content p {
+    text-align: left;
     font-size: 1.125rem;
     margin: 10px 0 42px;
 }
@@ -75,8 +69,7 @@ img {
 #skill {
     background-image: linear-gradient(#fff, #ffafbd);
     /*background-color: aquamarine;*/
-    background-blend-mode: screen;
-    min-height: 98vh;
+    background-blend-mode: overlay;
 }
 #skill .page-title {
     text-transform: none;
@@ -96,12 +89,18 @@ img {
     gap: 26px;
     grid-template-columns: 1fr 1fr 1fr;
     margin-top: 6%;
-    margin-bottom: 50px;
 }
 
 /* 見出し */
 .page-title {
     font-size: 5rem;
+    font-family: 'Philosopher', serif;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+/* タイルの見出し */
+.grid-title {
     font-family: 'Philosopher', serif;
     text-transform: uppercase;
     font-weight: normal;
