--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body {
     font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ　Pro W3", sans-serif;
     line-height: 1.7;
     color: #432;
+    background-image: linear-gradient(#fff, #ffafbd);
+    /*background-color: aquamarine;*/
+    background-blend-mode: screen;
+    min-height: 100vh;
 }
 a {
     text-decoration: none;
@@ -42,14 +46,202 @@ a {
     padding: 0 4%;
 }
 
+#About:target {
+    display: block;/*クリック後のcss*/
+}
+
+#skill:target {
+    display: block;
+}
+
+/* Gloval Navigation
+------------------------------------- */
+
+#g-nav{
+    /*position:fixed;にし、z-indexの数値を小さくして最背面へ*/
+    position:fixed;
+  z-index: -1;
+  opacity: 0;/*はじめは透過0*/
+    /*ナビの位置と形状*/
+  top:0;
+  width:100%;
+    height: 100vh;/*ナビの高さ*/
+  background:#999;
+    /*動き*/
+  transition: all 0.3s;
+}
+
+/*アクティブクラスがついたら透過なしにして最前面へ*/
+#g-nav.panelactive{
+  opacity: 1;
+  z-index:999;
+}
+
+/*ナビゲーションの縦スクロール*/
+#g-nav.panelactive #g-nav-list{
+    /*ナビの数が増えた場合縦スクロール*/
+    position: fixed;
+    z-index: 999; 
+    width: 100%;
+    height: 100vh;/*表示する高さ*/
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+/*ナビゲーション*/
+#g-nav ul {
+    display: none;
+    /*ナビゲーション天地中央揃え*/
+    position: absolute;
+    z-index: 999;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+
+#g-nav.panelactive ul {
+    display: block;
+}
+
+/*リストのレイアウト設定*/
+
+#g-nav li{
+  list-style: none;
+    text-align: center; 
+}
+
+#g-nav li a{
+  color: #333;
+  text-decoration: none;
+  padding:10px;
+  display: block;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: bold;
+}
+
+/*========= ボタンのためのCSS ===============*/
+.openbtn1{
+  position:fixed;
+    z-index: 9999;/*ボタンを最前面に*/
+  top:50px;
+  right: 50px;
+  cursor: pointer;
+    width: 100px;
+    height:50px;
+}
+  
+/*×に変化*/  
+.openbtn1 span{
+    display: inline-block;
+    transition: all .4s;
+    position: absolute;
+    left: 0px;
+    height: 5px;
+    border-radius: 2px;
+  background-color: #666;
+    width: 45%;
+  }
+
+.openbtn1 span:nth-of-type(1) {
+  top:25px; 
+}
+
+.openbtn1 span:nth-of-type(2) {
+  top:35px;
+}
+
+.openbtn1 span:nth-of-type(3) {
+  top:45px;
+}
+
+.openbtn1.active span:nth-of-type(1) {
+    top: 32px;
+    left: -5px;
+    transform: translateY(6px) rotate(-45deg);
+    width: 50%;
+}
+
+.openbtn1.active span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.openbtn1.active span:nth-of-type(3){
+    top: 44px;
+    left: -5px;
+    transform: translateY(-6px) rotate(45deg);
+    width: 50%;
+}
+
+/* アコーディオン全体
+------------------------------------- */
+.accordion-area {
+    list-style: none;
+    width: 96%;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.accordion-area li {
+    margin: 10px 0;
+}
+
+.accordion-area section {
+    border: 1px solid #ccc;
+}
+
+/* アコーディオンタイトル */
+.title {
+    position: relative; /*+マークの位置基準とするためrelative*/
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: normal;
+    padding: 3% 3% 3% 50px;
+    transition: all .5s ease;
+}
+
+/* アイコンの+と× */
+.title::before,
+.title::after {
+    position: absolute;
+    content: '';
+    width: 15px;
+    height: 2px;
+    background-color: #333;
+}
+
+.title::before {
+    top: 48%;
+    left: 15px;
+    transform: rotate(0deg);
+}
+
+.title::after {
+    top: 48%;
+    left: 15px;
+    transform: rotate(90deg);
+}
+
+/* closeというクラスがついたら形状変化 */
+.title.close::before {
+    transform: rotate(45deg);
+}
+
+.title.close::after {
+    transform: rotate(-45deg);
+}
+
+/* アコーディオンで現れるエリア */
+.box {
+    display: none; /*はじめは非表示 */
+    background: #f3f3f3;
+    margin: 0 3% 3% 3%;
+    padding: 3%;
+}
+
+
 /* Home
 ------------------------------------- */
-#home {
-    background-image: linear-gradient(#fff, #ffafbd);
-    /*background-color: aquamarine;*/
-    background-blend-mode: screen;
-    min-height: 100vh;
-}
 #home .page-title {
     text-transform: none;
 }
@@ -59,6 +251,20 @@ a {
 }
 
 .home-content p {
+    text-align: left;
+    font-size: 1.125rem;
+    margin: 10px 0 42px;
+}
+
+/* About
+------------------------------------- */
+
+.about-content {
+    text-align: center;
+    margin-top: 10%;
+}
+
+.about-content p {
     text-align: left;
     font-size: 1.125rem;
     margin: 10px 0 42px;
