--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,24 @@
 
 /* 共通部分
 ---------------------- */
+/* Google Font */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+
+/* リセットCSS(すべての要素の内、外側の余白を0に設定) */
+* {
+    margin: 0;
+    padding: 0;
+}
+
 html {
     font-size: 100%;
+    scroll-behavior: smooth;    /* スクロール発生時の挙動 */
 }
 body {
-    font-family: "Yu Gothic Medium", "游ゴシック Medium", YuGothic, "游ゴシック体", "ヒラギノ角ゴ　Pro W3", sans-serif;
+    font-family: "Poppins", sans-serif; /* Poppinsフォント適用 */
     line-height: 1.7;
     color: #432;
-    background-image: linear-gradient(#fff, #ffafbd);
     /*background-color: aquamarine;*/
     background-blend-mode: screen;
     min-height: 100vh;
@@ -60,15 +70,15 @@ a {
 #g-nav{
     /*position:fixed;にし、z-indexの数値を小さくして最背面へ*/
     position:fixed;
-  z-index: -1;
-  opacity: 0;/*はじめは透過0*/
+    z-index: -1;
+    opacity: 0;/*はじめは透過0*/
     /*ナビの位置と形状*/
-  top:0;
-  width:100%;
+    top:0;
+    width:100%;
     height: 100vh;/*ナビの高さ*/
-  background:#999;
+     background:#fff;
     /*動き*/
-  transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 /*アクティブクラスがついたら透過なしにして最前面へ*/
@@ -139,7 +149,7 @@ a {
     left: 0px;
     height: 5px;
     border-radius: 2px;
-  background-color: #666;
+    background-color: #666;
     width: 45%;
   }
 
@@ -273,7 +283,7 @@ a {
 /* Skill
 ------------------------------------- */
 #skill {
-    background-image: linear-gradient(#fff, #ffafbd);
+    /* background-image: linear-gradient(#fff, #ffafbd); */
     /*background-color: aquamarine;*/
     background-blend-mode: screen;
     min-height: 100vh;
@@ -298,6 +308,13 @@ a {
     margin-top: 6%;
 }
 
+.grid-item {
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    padding: 5%;
+}
+
 /* 見出し */
 .page-title {
     font-size: 5rem;
@@ -306,11 +323,10 @@ a {
     font-weight: normal;
 }
 
-/* タイルの見出し */
+/* カードの見出し */
 .grid-title {
-    font-family: 'Philosopher', serif;
-    text-transform: uppercase;
-    font-weight: normal;
+    text-size: 1.5rem;
+    text-align: center;
 }
 
 /* ボタン */
